# plotgeom

./: README.md  example.py  pyproject.toml  requirements.in  test.py
plotgeom/: __init__.py  axes.py  cameras.py  helpers.py  planes.py  rays.py  texts.py
viewgeom/: helpers.py
