[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
authors = [{ name = "Christoph Heindl"}]
name = "plotgeom"
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.packages.find]
where = ["."] 
include = ["plotgeom*"]

[tool.setuptools.dynamic]
version = {attr = "plotgeom.version.VERSION"}
dependencies = { file = ["requirements.in"] }